# Module30

HW/Task1/: CMakeLists.txt  main.cpp
HW/Task2/: CMakeLists.txt  main.cpp
HW/Task3/: CMakeLists.txt  main.cpp
Notes/FirstNote/: CMakeLists.txt  main.cpp
